# order-service/docs/swagger.json
@@ -87,6 +87,12 @@
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -262,6 +268,12 @@
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -326,6 +338,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
@@ -413,11 +431,14 @@
         "handler.OrderItem": {
             "type": "object",
             "properties": {
+                "car_name": {
+                    "description": "CustomerName string `json:\"customer_name\"`",
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "price_cents": {
-                    "description": "CustomerName string `json:\"customer_name\"`\nCarName      string `json:\"car_name\"`",
                     "type": "integer"
                 }
             }
@@ -425,6 +446,9 @@
         "handler.UpdateOrderRequest": {
             "type": "object",
             "properties": {
+                "car_name": {
+                    "type": "string"
+                },
                 "price_cents": {
                     "type": "integer"
                 }
